--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,7 +401,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background: url("../img/laptop.png") top center;
   background-size: cover;
   position: relative;
@@ -679,12 +679,12 @@ color: #E57718;
 }
 
 .why-us .icon-boxes .icon-box i {
-  font-size: 32px;
+  /* font-size: 32px;
   padding: 18px;
   color: #5fcf80;
   margin-bottom: 30px;
   background: #ecf9f0;
-  border-radius: 50px;
+  border-radius: 50px; */
 }
 
 .why-us .icon-boxes .icon-box h4 {
