--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1699,163 +1699,89 @@ color: #E57718;
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-#footer {
-  color: #37423b;
-  font-size: 14px;
-  background: #eef0ef;
+
+
+/* client */
+
+.section-bg {
+  background-color: #f8fbfe;
 }
 
-#footer .footer-top {
-  padding: 60px 0 30px 0;
-  background: #f9faf9;
+.clients {
+  padding: 15px 0;
+  text-align: center;
 }
 
-#footer .footer-top .footer-contact {
-  margin-bottom: 30px;
+.clients img {
+  max-width: 45%;
+  transition: all 0.4s ease-in-out;
+  display: inline-block;
+  padding: 15px 0;
+  filter: grayscale(100);
 }
 
-#footer .footer-top .footer-contact h4 {
-  font-size: 22px;
-  margin: 0 0 30px 0;
-  padding: 2px 0 2px 0;
+.clients img:hover {
+  filter: none;
+  transform: scale(1.15);
+}
+
+@media (max-width: 768px) {
+  .clients img {
+    max-width: 40%;
+  }
+}
+
+
+
+/* share */
+
+
+.footer .footer-newsletter {
+  padding: 50px 0;
+  background: #f6f9ff;
+  border-top: 1px solid #e1ecff;
+}
+
+.footer .footer-newsletter h4 {
+  font-size: 24px;
+  margin: 0 0 10px 0;
+  padding: 0;
   line-height: 1;
   font-weight: 700;
+  color: #012970;
 }
 
-#footer .footer-top .footer-contact p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-  color: #777777;
-}
-
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #444444;
-  position: relative;
-  padding-bottom: 12px;
-}
-
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #5fcf80;
-  font-size: 18px;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
-
-#footer .footer-top .footer-links ul a {
-  color: #777777;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul a:hover {
-  text-decoration: none;
-  color: #5fcf80;
-}
-
-#footer .footer-newsletter {
-  font-size: 15px;
-}
-
-#footer .footer-newsletter h4 {
-  font-size: 16px;
-  font-weight: bold;
-  color: #444444;
-  position: relative;
-  padding-bottom: 12px;
-}
-
-#footer .footer-newsletter form {
-  margin-top: 30px;
+.footer .footer-newsletter form {
+  margin-top: 20px;
   background: #fff;
   padding: 6px 10px;
   position: relative;
-  border-radius: 50px;
-  text-align: left;
-  border: 1px solid #e0e5e2;
+  border-radius: 4px;
+  border: 1px solid #e1ecff;
 }
 
-#footer .footer-newsletter form input[type="email"] {
+.footer .footer-newsletter form input[type="email"] {
   border: 0;
-  padding: 4px 8px;
-  width: calc(100% - 100px);
+  padding: 8px;
+  width: calc(100% - 140px);
 }
 
-#footer .footer-newsletter form input[type="submit"] {
+.footer .footer-newsletter form input[type="submit"] {
   position: absolute;
-  top: -1px;
-  right: -1px;
-  bottom: -1px;
+  top: 0;
+  right: 0;
+  bottom: 0;
   border: 0;
   background: none;
   font-size: 16px;
-  padding: 0 20px 2px 20px;
-  background: #E57718;
+  padding: 0 30px;
+  margin: 3px;
+  background: #4154f1;
   color: #fff;
   transition: 0.3s;
-  border-radius: 50px;
-  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
 }
 
-#footer .footer-newsletter form input[type="submit"]:hover {
-  background: #c57631;
-}
-
-#footer .credits {
-  padding-top: 5px;
-  font-size: 13px;
-}
-
-#footer .credits a {
-  color: #E57718;
-  transition: 0.3s;
-}
-
-#footer .credits a:hover {
-  color: #5fcf80;
-}
-
-#footer .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: #E57718;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 50%;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
-
-#footer .social-links a:hover {
-  background: #3ac162;
-  color: #fff;
-  text-decoration: none;
+.footer .footer-newsletter form input[type="submit"]:hover {
+  background: #5969f3;
 }
