--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -22,4 +22,13 @@
     .line {
         display: none;
     }
+    .modal-input {
+      margin-bottom: 20px;
+    }
+    .modal-refer_{
+      
+    }
+    .modal-refer {
+      margin-top: 19px;
+    }
 }
