--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   color: #444444;
+  overflow-x: hidden;
 }
 
 a {
@@ -40,13 +41,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 
+.section {
+  margin-top: 150px;
+  background: rgba(229, 119, 24, 0.05);
+}
+
+
 .hero-text {
   font-family: Poppins;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
   line-height: 72px;
-  
+
   align-items: center;
   color: #000000;
 }
@@ -57,6 +64,14 @@ font-style: normal;
 font-weight: normal;
 font-size: 18px;
 line-height: 27px;
+color: #000000;
+}
+.lead_ {
+  font-family: Poppins;
+font-style: normal;
+font-weight: normal;
+font-size: 13px;
+line-height: 20px;
 color: #000000;
 }
 
