--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ h1 {
 
   width: 30%;
   box-shadow: 0px 0px 0px #e7e3e326;
-  
+
 }
 
 .search {
@@ -217,6 +217,12 @@ box-sizing: border-box;
 .input-data input:focus~.underline:before,
 .input-data input:valid~.underline:before {
   transform: scaleX(1);
+}
+
+@media screen and (max-width: 750px) {
+  .all {
+    margin-top: 120px;
+  }
 }
 
 
