--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;900&family=Varela+Round&display=swap");
 
-
 /**
 * Template Name: Mentor - v2.2.1
 * Template URL: https://bootstrapmade.com/mentor-free-education-bootstrap-theme/
@@ -11,119 +10,134 @@
 * License: https://bootstrapmade.com/license/
 */
 
+
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 
 html {
-  scroll-behavior: smooth !important;
-  width: 100%;
-  overflow-x: hidden;
+    scroll-behavior: smooth !important;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  color: #444444;
-  overflow-x: hidden;
+    font-family: 'Poppins', sans-serif;
+    color: #444444;
+    overflow-x: hidden;
 }
 
 a {
-  color: #5fcf80;
+    color: #5fcf80;
 }
 
 a:hover {
-  color: #86db9f;
-  text-decoration: none;
+    color: #86db9f;
+    text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Poppins', sans-serif;
 }
-
 
 .section {
-  margin-top: 150px;
-  background: rgba(229, 119, 24, 0.05);
+    margin-top: 150px;
+    background: rgba(229, 119, 24, 0.05);
 }
 
-
 .hero-text {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 40px;
-  line-height: 72px;
-
-  align-items: center;
-  color: #000000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 72px;
+    align-items: center;
+    color: #000000;
 }
 
 .lead {
-  font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 27px;
-color: #000000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 27px;
+    color: #000000;
 }
+
 .lead_ {
-  font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 13px;
-line-height: 20px;
-color: #000000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 13px;
+    line-height: 20px;
+    color: #000000;
 }
 
 .lead1 {
-  font-family: Poppins;
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 35px;
-color: #000000;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 35px;
+    color: #000000;
 }
 
 .button {
-  background-color: #E57718;
-  border-radius: 0px !important;
-  -webkit-box-shadow:0 0 3px rgba(0, 0, 0, 0.25);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
-  padding: 13px 100px 13px !important;
-  color: white;
-  font-weight: 500;
-  font-size: 1.125rem;
+    background-color: #E57718;
+    border-radius: 0px !important;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    padding: 13px 100px 13px !important;
+    color: white;
+    font-weight: 500;
+    font-size: 1.125rem;
 }
 
 .button:hover {
-  background: white;
-  transition: 1s;
-  color: #E57718!important;
-  border: 3px solid #E57718;
+    background: white;
+    transition: 1s;
+    color: #E57718!important;
+    border: 3px solid #E57718;
 }
 
 .button1 {
-  border: 3px solid #E57718;
-  box-sizing: border-box;
-  background-color: #fff;
-  border-radius: 0px !important;
-  -webkit-box-shadow:0 0 3px rgba(0, 0, 0, 0.25);
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
-  padding: 13px 100px 13px !important;
-  color: #656565!important;
-  font-weight: 500;
-  font-size: 1.225rem;
+    border: 3px solid #E57718;
+    box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 0px !important;
+    -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+    padding: 13px 100px 13px !important;
+    color: #656565!important;
+    font-weight: 500;
+    font-size: 1.225rem;
 }
 
 .button1:hover {
-  background-color: #E57718;
-  transition: 1s;
-  color: white!important;
+    background-color: #E57718;
+    transition: 1s;
+    color: white!important;
 }
 
+.vs--searchable .vs__dropdown-toggle {
+    cursor: text;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    padding: 1.6rem 1rem !important;
+    font-size: 1rem;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 8px;
+    border: 1px solid #a0a0a0;
+}
 
-
-
-
-
-
+.vs__clear {
+    display: none !important;
+}
