--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,3 +243,68 @@ h1 {
         margin-top: 120px;
     }
 }
+
+
+/* modal  */
+
+body {
+  background: #eee
+}
+
+.item .item-content {
+  padding: 30px 35px
+}
+
+.image-upload {
+  width: 100%;
+  height: 200px;
+  border: 1px dashed #ddd;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  position: relative;
+  text-align: center;
+  background: #656565;
+  color: #fff;
+  overflow: hidden
+}
+
+.item-wrapper form img {
+  margin-bottom: 20px;
+  width: auto;
+  height: auto;
+  max-height: 400px;
+  width: auto;
+  border-radius: 5px;
+  overflow: hidden
+}
+
+.image-upload img {
+  height: 100% !important;
+  width: auto !important;
+  border-radius: 0px;
+  margin: 0 auto
+}
+
+.image-upload i {
+  font-size: 6em;
+  color: #ccc
+}
+
+.image-upload input {
+  cursor: pointer;
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  position: absolute;
+  top: 0;
+  left: 0
+}
+
+.item-wrapper input {
+  height: 43px;
+  line-height: 43px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 20px
+}
