--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ h6 {
 .vs--searchable .vs__dropdown-toggle {
     cursor: text;
     height: calc(1.5em + 0.75rem + 2px) !important;
-    padding: 1.6rem 1rem !important;
+    padding: 1.6rem 1rem;
     font-size: 1rem;
     align-items: center !important;
     display: flex !important;
@@ -141,7 +141,67 @@ h6 {
 .vs__clear {
     display: none !important;
 }
+.small-select .vs--searchable .vs__dropdown-toggle {
+  cursor: text;
+  height: calc(1.5em + 0.75rem + 2px) !important;
+  padding: 1.3rem 1rem;
+  font-size: 1rem;
+  align-items: center !important;
+  display: flex !important;
+  font-weight: 400;
+  line-height: 1.5 !important;
+  color: #000;
+  border-radius: 0px;
+  border: 1px solid #a0a0a0;
+}
 
+.selectdate .vs--searchable .vs__dropdown-toggle {
+  cursor: text;
+  height: calc(1.5em + 0.75rem + 2px) !important;
+  padding: 1.1rem 5px;
+  margin: 0px 0px 30px;
+  font-size: 13px;
+  align-items: center !important;
+  display: flex !important;
+  font-weight: 400;
+  line-height: 1.5 !important;
+  color: #000;
+  border-radius: 0px;
+  border: 1px solid #a0a0a0;
+}
+
+.selectdate1 .vs--searchable .vs__dropdown-toggle {
+  cursor: text;
+  height: calc(1.5em + 0.75rem + 2px) !important;
+  padding: 1.1rem 5px;
+  /* margin: 0px 0px 30px; */
+  font-size: 13px;
+  align-items: center !important;
+  display: flex !important;
+  font-weight: 400;
+  line-height: 1.5 !important;
+  color: #000;
+  border-radius: 0px;
+  border: 1px solid #a0a0a0;
+}
+.selectdate2 .vs--searchable .vs__dropdown-toggle {
+  cursor: text;
+  height: calc(1.5em + 0.75rem + 2px) !important;
+  padding: 1.1rem 5px;
+  margin: 0px 0px 32px;
+  font-size: 13px;
+  align-items: center !important;
+  display: flex !important;
+  font-weight: 400;
+  line-height: 1.5 !important;
+  color: #000;
+  border-radius: 0px;
+  border: 1px solid #a0a0a0;
+}
+
+.vs__clear {
+  display: none !important;
+}
 
 /* dashboard  */
 
@@ -308,3 +368,12 @@ body {
   border-radius: 4px;
   margin-bottom: 20px
 }
+
+/* modal 2  */
+
+.bg-image{
+  background: #626D73;
+  border-radius: 10px;
+}
+
+
