--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ h6 {
     color: #000000;
 }
 
-.button {
+.button_ {
     background-color: #E57718;
     border-radius: 0px !important;
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
@@ -98,14 +98,18 @@ h6 {
     font-size: 1.125rem;
 }
 
-.button:hover {
+.button_:hover {
     background: white;
     transition: 1s;
     color: #E57718!important;
     border: 3px solid #E57718;
 }
 
-.button1 {
+a {
+  text-decoration: none!important;
+}
+
+.button_1 {
     border: 3px solid #E57718;
     box-sizing: border-box;
     background-color: #fff;
@@ -113,12 +117,12 @@ h6 {
     -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
     padding: 13px 100px 13px !important;
-    color: #656565!important;
+    color: #e5e5e5!important;
     font-weight: 500;
     font-size: 1.225rem;
 }
 
-.button1:hover {
+.button_1:hover {
     background-color: #E57718;
     transition: 1s;
     color: white!important;
