--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ h6 {
 }
 
 a {
-  text-decoration: none!important;
+    text-decoration: none!important;
 }
 
 .button_1 {
@@ -145,67 +145,70 @@ a {
 .vs__clear {
     display: none !important;
 }
+
 .small-select .vs--searchable .vs__dropdown-toggle {
-  cursor: text;
-  height: calc(1.5em + 0.75rem + 2px) !important;
-  padding: 1.3rem 1rem;
-  font-size: 1rem;
-  align-items: center !important;
-  display: flex !important;
-  font-weight: 400;
-  line-height: 1.5 !important;
-  color: #000;
-  border-radius: 0px;
-  border: 1px solid #a0a0a0;
+    cursor: text;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    padding: 1.3rem 1rem;
+    font-size: 1rem;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 0px;
+    border: 1px solid #a0a0a0;
 }
 
 .selectdate .vs--searchable .vs__dropdown-toggle {
-  cursor: text;
-  height: calc(1.5em + 0.75rem + 2px) !important;
-  padding: 1.1rem 5px;
-  margin: 0px 0px 30px;
-  font-size: 13px;
-  align-items: center !important;
-  display: flex !important;
-  font-weight: 400;
-  line-height: 1.5 !important;
-  color: #000;
-  border-radius: 0px;
-  border: 1px solid #a0a0a0;
+    cursor: text;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    padding: 1.1rem 5px;
+    margin: 0px 0px 30px;
+    font-size: 13px;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 0px;
+    border: 1px solid #a0a0a0;
 }
 
 .selectdate1 .vs--searchable .vs__dropdown-toggle {
-  cursor: text;
-  height: calc(1.5em + 0.75rem + 2px) !important;
-  padding: 1.1rem 5px;
-  /* margin: 0px 0px 30px; */
-  font-size: 13px;
-  align-items: center !important;
-  display: flex !important;
-  font-weight: 400;
-  line-height: 1.5 !important;
-  color: #000;
-  border-radius: 0px;
-  border: 1px solid #a0a0a0;
+    cursor: text;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    padding: 1.1rem 5px;
+    /* margin: 0px 0px 30px; */
+    font-size: 13px;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 0px;
+    border: 1px solid #a0a0a0;
 }
+
 .selectdate2 .vs--searchable .vs__dropdown-toggle {
-  cursor: text;
-  height: calc(1.5em + 0.75rem + 2px) !important;
-  padding: 1.1rem 5px;
-  margin: 0px 0px 32px;
-  font-size: 13px;
-  align-items: center !important;
-  display: flex !important;
-  font-weight: 400;
-  line-height: 1.5 !important;
-  color: #000;
-  border-radius: 0px;
-  border: 1px solid #a0a0a0;
+    cursor: text;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    padding: 1.1rem 5px;
+    margin: 0px 0px 32px;
+    font-size: 13px;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 0px;
+    border: 1px solid #a0a0a0;
 }
 
 .vs__clear {
-  display: none !important;
+    display: none !important;
 }
+
 
 /* dashboard  */
 
@@ -312,72 +315,75 @@ h1 {
 /* modal  */
 
 body {
-  background: #eee
+    background: #eee
 }
 
 .item .item-content {
-  padding: 30px 35px
+    padding: 30px 35px
 }
 
 .image-upload {
-  width: 100%;
-  height: 200px;
-  border: 1px dashed #ddd;
-  border-radius: 5px;
-  margin-bottom: 20px;
-  position: relative;
-  text-align: center;
-  background: #656565;
-  color: #fff;
-  overflow: hidden
+    width: 100%;
+    height: 200px;
+    border: 1px dashed #ddd;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    position: relative;
+    text-align: center;
+    background: #656565;
+    color: #fff;
+    overflow: hidden
 }
 
 .item-wrapper form img {
-  margin-bottom: 20px;
-  width: auto;
-  height: auto;
-  max-height: 400px;
-  width: auto;
-  border-radius: 5px;
-  overflow: hidden
+    margin-bottom: 20px;
+    width: auto;
+    height: auto;
+    max-height: 400px;
+    width: auto;
+    border-radius: 5px;
+    overflow: hidden
 }
 
 .image-upload img {
-  height: 100% !important;
-  width: auto !important;
-  border-radius: 0px;
-  margin: 0 auto
+    height: 100% !important;
+    width: auto !important;
+    border-radius: 0px;
+    margin: 0 auto
 }
 
 .image-upload i {
-  font-size: 6em;
-  color: #ccc
+    font-size: 6em;
+    color: #ccc
 }
 
 .image-upload input {
-  cursor: pointer;
-  opacity: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  position: absolute;
-  top: 0;
-  left: 0
+    cursor: pointer;
+    opacity: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0
 }
 
 .item-wrapper input {
-  height: 43px;
-  line-height: 43px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  margin-bottom: 20px
+    height: 43px;
+    line-height: 43px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 20px
 }
+
 
 /* modal 2  */
 
-.bg-image{
-  background: #626D73;
-  border-radius: 10px;
+.bg-image {
+    background: #626D73;
+    border-radius: 10px;
 }
 
-
+.color-orange {
+    color: #e57718 !important;
+}
