--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,28 @@ h6 {
   margin-top: 50px;
 }
 
+.pagination-sm .page-link {
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border: none;
+  margin-top: 10px;
+}
+
+.page-item {
+  width: 50px;
+}
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #E57718!important;
+  border-color: #E57718;
+  margin-left: 5px;
+  border-radius: 50px;
+  padding: 8px 14px 8px;
+
+}
+
 .section {
     margin-top: 150px;
     background: rgba(229, 119, 24, 0.05);
