--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ h6 {
   line-height: 1.5;
   border: none;
   margin-top: 10px;
-  
+
 }
 
 li .page-item  {
@@ -63,7 +63,7 @@ li .page-item  {
 
 .page-item {
   width: 50px;
-  
+
 }
 
 .page-item.active .page-link {
@@ -80,7 +80,7 @@ li .page-item  {
 }
 
 .no-opinion-img {
-  width: 100px;
+  width: 80px;
 }
 
 .section {
@@ -291,8 +291,7 @@ h1 {
 }
 
 .wrapper .input-data .input {
-    height: 100%;
-    width: 180%;
+
     border: none;
     font-size: 17px;
     background: #FAFAFA;
@@ -302,6 +301,19 @@ h1 {
     border-radius: 0;
     font: normal normal 600 15px/0px Montserrat;
     color: #AAAAAA;
+}
+
+@media screen and (min-width: 750px){
+  .wrapper .input-data .input {
+    height: 100%;
+    width: 180%;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .wrapper .input-data .input {
+    width: 270px;
+  }
 }
 
 .input-data input:focus~label,
