--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,32 @@ a {
     border: 1px solid #a0a0a0;
 }
 
+.small-select_ .vs--searchable .vs__dropdown-toggle {
+    cursor: text;
+    height: calc(1.1em + 0.75rem + 2px) !important;
+    width: 180px;
+    padding: 1.0rem 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 3px;
+    border: 1px solid #a0a0a0;
+}
+.small-select_  label {
+  font-size: 12px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.small-select_ {
+  position: relative;
+  top: 70px;
+  left: 40px;
+}
+
 .selectdate .vs--searchable .vs__dropdown-toggle {
     cursor: text;
     height: calc(1.5em + 0.75rem + 2px) !important;
