--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,6 +201,25 @@ a {
     border: 1px solid #a0a0a0;
 }
 
+.small-select2 .vs--searchable .vs__dropdown-toggle {
+    cursor: text;
+    height: 32px!important;
+    padding: 1.2rem 1rem;
+    font-size: 16px!important;
+    align-items: center !important;
+    display: flex !important;
+    font-weight: 400;
+    line-height: 1.5 !important;
+    color: #000;
+    border-radius: 8px;
+    border: 1px solid #a0a0a0;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    font-family: 'Poppins', sans-serif;
+}
+
 .small-select_ .vs--searchable .vs__dropdown-toggle {
     cursor: text;
     height: calc(1.9em + 0.75rem + 2px) !important;
