--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -690,7 +690,7 @@ body {
   width: fit-content;
   border: unset;
   border-radius: 50px;
-  background-color: #ff6352;
+  background: #e57718;
   color: #fff;
   font-weight: 700;
   font-size: 17px;
